# t2json

./: LICENSE  README.md  USAGE.md  pyproject.toml  readme.md  requirements.txt
docs/: FAQ.md  TROUBLESHOOTING.md  USAGE.md
t2json/: t2json.py
